# winmerge_ai_exporter

./: CHANGELOG.md  CONTRIBUTING.md  DISTRIBUTION_GUIDE.md  LICENSE  MERMAID_INSTALLATION_GUIDE.md  README.md  REDACTION_MODES.md  SECRET_ALGORITHMS.md  build-release.bat  build-release.sh  deploy-local.bat  deploy-local.sh  launch_gui.bat  pyproject.toml  requirements-dev.txt  requirements.txt  run-ci-locally.bat  run-ci-locally.sh  test-changelog-local.sh
.github/workflows/: ci-cd.yml  tests.yml
gui/: __init__.py  __main__.py  launcher.py  mermaid_panel.py
sample_diffs/: sample_changes.patch
tests/: conftest.py  test_arch_and_tokens.py  test_code_flow_analyzer.py  test_diff_parser.py  test_integration.py  test_redactor.py  test_risk_scorer.py  test_winmerge_integration.py
winmerge_ai_exporter/: __init__.py  __main__.py  arch_analyzer.py  cli.py  code_flow_analyzer.py  diff_parser.py  exporter.py  redactor.py  risk_scorer.py  token_estimator.py  winmerge_integration.py
winmerge_plugin/: AIReviewExporter.sct  README.md
