[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "winmerge-ai-exporter"
version = "1.0.0"
description = "Export WinMerge diffs as an AI-ready architecture review package"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["winmerge", "diff", "ai", "code-review", "architecture"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control",
    "Topic :: Software Development :: Quality Assurance",
]

# Zero mandatory runtime dependencies — stdlib only.
dependencies = []

[project.optional-dependencies]
gui = ["tkinter"]   # stdlib on most platforms; listed for documentation
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
winmerge-ai-exporter = "winmerge_ai_exporter.cli:main"

[project.urls]
Homepage = "https://github.com/winmerge/winmerge"
"Bug Tracker" = "https://github.com/winmerge/winmerge/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["winmerge_ai_exporter*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["winmerge_ai_exporter"]
omit = ["tests/*"]
