[tool.poetry]
name = "winmerge-ai-exporter"
version = "1.3.2"
description = "Export WinMerge diffs as an AI-ready architecture review package"
authors = ["Claude (Anthropic)"]
license = "MIT"
readme = "README.md"
packages = [{include = "winmerge_ai_exporter"}]

[tool.poetry.dependencies]
# Runtime: zero third-party dependencies — stdlib only.
# This is intentional. The tool must run on a restricted Windows account
# with no internet access; pulling in any third-party package would break
# that guarantee.
python = ">=3.10,<3.14"

[tool.poetry.group.dev.dependencies]
# All versions pinned so every developer and every CI runner gets
# identical behaviour regardless of when they install.
pytest     = ">=8.0,<9.0"
pytest-cov = ">=5.0,<6.0"

[tool.poetry.group.build.dependencies]
# Used only by build-release / deploy-local — not needed for tests.
pyinstaller = ">=6.0,<7.0"

[tool.poetry.scripts]
winmerge-ai-exporter = "winmerge_ai_exporter.cli:main"

# ── build system ─────────────────────────────────────────────────────────────
# Keep setuptools as the build backend so the package can still be installed
# with plain `pip install .` without requiring Poetry on the target machine.
[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# ── pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"

# ── coverage ──────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["winmerge_ai_exporter"]
omit   = ["tests/*"]

# ── setuptools package discovery ─────────────────────────────────────────────
[tool.setuptools.packages.find]
where   = ["."]
include = ["winmerge_ai_exporter*"]
